[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/weapons/hitscan_weapon.gd" type="Script" id=1]

[node name="HitscanWeapon" type="Spatial"]
process_priority = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true

[node name="AudioStream" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="RayCast" type="RayCast" parent="."]
unique_name_in_owner = true
enabled = true
cast_to = Vector3( 20, 0, 0 )
collision_mask = 5
collide_with_areas = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
